@@ -171,13 +171,14 @@ void Ping6::Send ()
       /* hack to have ifIndex in Ipv6RawSocketImpl
        * maybe add a SetIfIndex in Ipv6RawSocketImpl directly 
        */
-      Ipv6InterfaceAddress dstIa (m_peerAddress);
       for (uint32_t i = 0; i < GetNode ()->GetObject<Ipv6> ()->GetNAddresses (m_ifIndex); i++)
         {
-          src = GetNode ()->GetObject<Ipv6> ()->GetAddress (m_ifIndex, i).GetAddress ();
-          Ipv6InterfaceAddress srcIa (src);
-          if ( srcIa.GetScope() == dstIa.GetScope() )
+          Ipv6InterfaceAddress srcIa;
+          srcIa = GetNode ()->GetObject<Ipv6> ()->GetAddress (m_ifIndex, i);
+
+          if (srcIa.IsInSameSubnet (m_peerAddress))
             {
+              src = srcIa.GetAddress ();
               break;
             }
         }
